--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first",
+  "name": "davlat-fuqorolik-xizmati-togrisida",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
