--- a/app.json
+++ b/app.json
@@ -24,7 +24,9 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "extra": {
       "router": {
         "origin": false
@@ -32,6 +34,12 @@
       "eas": {
         "projectId": "ece53340-0a39-4571-a654-e15899941c5c"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/ece53340-0a39-4571-a654-e15899941c5c"
     }
   }
 }
